Add id (#messge) to the messages menu item
This is to enable the javascript add the active class to it if messages/inbox or messages/sent or messages/trash is being showed

--- a/views/partials/dashboard-topbar.jade
+++ b/views/partials/dashboard-topbar.jade
@@ -30,7 +30,7 @@ button.pull-left.navbar-toggle.collapsed(data-target='#sidebar2', data-toggle='c
         span.menu-text Text Chat
       b.arrow
     li.hover
-      a(href='/user/messages')
+      a#message(href='/message')
         i.menu-icon.fa.fa-envelope-o
         span.menu-text
           | Messages
