[Bug fix] Modify message footer to show 0 messages instead of 0 message

--- a/views/message/partials/footer.jade
+++ b/views/message/partials/footer.jade
@@ -1,8 +1,8 @@
 .pull-left
-  if itemCount > 1
-    |#{itemCount} messages
-  else
+  if itemCount == 1 
     |#{itemCount} message
+  else
+    |#{itemCount} messages
     
 .pull-right
   .inline.middle page #{currentPage} of #{pageCount}
