[Bug Fix] Change how the inbox jade template differenctiates senders and receivers
The sender object that is used for the check comes sometimes as an object and as a string. hence the bug of sometimes trying to access properties of a string.

--- a/views/message/partials/messagelist.jade
+++ b/views/message/partials/messagelist.jade
@@ -2,10 +2,16 @@
 #message-list.message-list
   // #section:pages/inbox.message-list.item
   mixin messageItem(message)
-      if message.sender.id == session.userId
-        - var name = message.receiver.name.full
+      if typeof(message.sender).toString() == 'object'
+        if message.sender.id == session.userId
+          - var name = message.receiver.name.full
+        else
+          - var name = message.sender.name.full
       else
-        - var name = message.sender.name.full
+        if message.sender == session.userId
+          - var name = message.receiver.name.full
+        else
+          - var name = message.sender.name.full
         
       .message-item(class= message.status.read ? '' : 'message-unread')
         label.inline
