Initial wiring of the inbox message delete button.
Yet to add the ajax delete functionality. Added an ID of delete on the button for hooking with JavaScript. Also add an ID of numberOfMessages to the footer to enable JavaScript to update appropriately.

--- a/views/message/partials/footer.jade
+++ b/views/message/partials/footer.jade
@@ -1,8 +1,10 @@
 .pull-left
   if itemCount == 1 
-    |#{itemCount} message
+    span#numberOfMessages #{itemCount}
+    |&nbsp;message
   else
-    |#{itemCount} messages
+    span#numberOfMessages #{itemCount}
+    |&nbsp;messages
     
 .pull-right
   .inline.middle page #{currentPage} of #{pageCount}
