--- a/views/message/partials/navbars.jade
+++ b/views/message/partials/navbars.jade
@@ -5,7 +5,7 @@
       span.blue.bigger-150 #{pageTitle}
       //- span#unread.grey.bigger-110 
     .message-toolbar.hide
-      button.btn.btn-xs.btn-white.btn-primary(type="button")
+      button#delete.btn.btn-xs.btn-white.btn-primary(type="button")
         i.ace-icon.fa.fa-trash-o.bigger-125.orange
         span.bigger-110 Delete
   div
