Temporarily put a default hospital for all doctors

--- a/views/doctors/profile.jade
+++ b/views/doctors/profile.jade
@@ -103,7 +103,7 @@ block content
         .profile-info-row
           .profile-info-name Hospital
           .profile-info-value
-            span.editable#hospital= user.doctor.is
+            span.editable#hospital VCH
         .profile-info-row
           .profile-info-name About Me
           .profile-info-value
