Add jQuery form for ajax submit of new mail form

--- a/views/message/inbox.jade
+++ b/views/message/inbox.jade
@@ -18,6 +18,7 @@ append scripts
   script(src='/assets/js/chosen.jquery.js')
   script(src='/assets/js/jquery.maskedinput.js')
   script(src='/assets/js/fuelux/search.js')
+  script(src='/assets/js/jquery.form.js')
   script(src='/javascripts/inbox.js')
     
 block content
