--- a/views/message/partials/navbars.jade
+++ b/views/message/partials/navbars.jade
@@ -43,7 +43,7 @@
         span.bigger-110 &nbsp;Discard
     .messagebar-item-right
       //- span.inline.btn-send-message
-      button.btn.btn-sm.btn-primary.no-border.btn-white(type="button")
+      button#send.btn.btn-sm.btn-primary.no-border.btn-white(type="button")
         span.bigger-110 Send
         i.ace-icon.fa.fa-send-o.green.icon-on-right
 // /section:pages/inbox.navbar
