Add alert message to small screens
Mobile screens are not yet supported

--- a/views/layouts/default.jade
+++ b/views/layouts/default.jade
@@ -66,7 +66,7 @@ html(lang='en')
                   block content
                 .hidden-md.hidden-lg
                   .well.well-sm
-                    | You can place multiple toggle buttons for multiple menus anywhere inside navbar!
+                    | Mobile Screens are not yet supported.
                 // PAGE CONTENT ENDS
               // /.col
             // /.row
