Remove the text chatting route and menu item

--- a/views/partials/dashboard-topbar.jade
+++ b/views/partials/dashboard-topbar.jade
@@ -24,17 +24,16 @@ button.pull-left.navbar-toggle.collapsed(data-target='#sidebar2', data-toggle='c
         i.menu-icon.fa.fa-camera-retro
         span.menu-text  Video conference
       b.arrow
-    li.hover
-      a(href='/chat/text')
-        i.menu-icon.fa.fa-comments-o
-        span.menu-text Text Chat
-      b.arrow
+    //- li.hover
+    //-   a(href='/chat/text')
+    //-     i.menu-icon.fa.fa-comments-o
+    //-     span.menu-text Text Chat
+    //-   b.arrow
     li.hover
       a#message(href='/message')
         i.menu-icon.fa.fa-envelope-o
         span.menu-text
           | Messages
-          span.badge.badge-primary 5
       b.arrow
   // /.nav-list
 // .sidebar
