Wire up the doctors list route
Pass in an array of doctors to the response.render after populating the hospital.

--- a/views/doctors/profile.jade
+++ b/views/doctors/profile.jade
@@ -103,7 +103,7 @@ block content
         .profile-info-row
           .profile-info-name Hospital
           .profile-info-value
-            span.editable#hospital VCH
+            span.editable#hospital= user.hospital.name
         .profile-info-row
           .profile-info-name About Me
           .profile-info-value
