--- a/views/layouts/partials/scripts.jade
+++ b/views/layouts/partials/scripts.jade
@@ -5,6 +5,7 @@ script(type='text/javascript').
 script(src='/assets/js/bootstrap.js')
 // page specific plugin scripts
 // ace scripts
+script(src='/assets/js/jquery.gritter.js')
 script(src='/assets/js/ace/elements.scroller.js')
 script(src='/assets/js/ace/elements.colorpicker.js')
 script(src='/assets/js/ace/elements.fileinput.js')
@@ -45,3 +46,5 @@ script(type='text/javascript').
       });
     });
   });
+  
+  
