--- a/views/profile.jade
+++ b/views/profile.jade
@@ -2,7 +2,7 @@ extends ./layouts/default
 append pagespecificstyles
   //- page specific styles
   link(rel='stylesheet', href='/assets/css/jquery-ui.custom.css')
-  link(rel='stylesheet', href='/assets/css/jquery.gritter.css')
+  //- link(rel='stylesheet', href='/assets/css/jquery.gritter.css')
   link(rel='stylesheet', href='/assets/css/select2.css')
   link(rel='stylesheet', href='/assets/css/datepicker.css')
   link(rel='stylesheet', href='/assets/css/bootstrap-editable.css')
@@ -14,7 +14,7 @@ append scripts
   //- page specific scripts
   script(src='/assets/js/jquery-ui.custom.js')
   script(src='/assets/js/jquery.ui.touch-punch.js')
-  script(src='/assets/js/jquery.gritter.js')
+  //- script(src='/assets/js/jquery.gritter.js')
   script(src='/assets/js/bootbox.js')
   script(src='/assets/js/jquery.easypiechart.js')
   script(src='/assets/js/date-time/bootstrap-datepicker.js')
