[Bug Fix]Hide the current doctor when checking through the list of doctors

--- a/views/doctors/list.jade
+++ b/views/doctors/list.jade
@@ -250,6 +250,8 @@ block content
               th
           tbody
             each doc in doctors
+              if doc._id == session.userId
+                - continue
               tr
                 td.center
                   label.pos-rel
